# Ing-Soft-Project

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/controllers/: __init__.py  auth.py  user.py
backend/app/core/: __init__.py  settings.py  storage.py
backend/app/crud/: __init__.py  order.py  others.py  product.py  service.py  user.py
backend/app/db/: __init__.py  main.py
backend/app/infra/: __init__.py  auth.py  main.py  user.py
backend/app/models/: __init__.py  order.py  others.py  product.py  service.py  user.py
backend/app/routers/: __init__.py  auth.py  order.py  others.py  product.py  produtc.py  service.py  user.py
backend/app/routes/: __init__.py  auth.py  invoice.py  order.py  others.py  product.py  service.py  user.py
backend/app/schemas/: __init__.py  order.py  others.py  product.py  service.py  user.py
backend/app/services/: __init__.py  auth.py  email.py  email_sender.py  gen_ai.py  invoice.py  order.py  others.py  product.py  service.py  user.py
backend/app/templates/: invoice_email.html  invoice_pdf.html
backend/app/utils/: __init__.py  order.py  others.py  product.py  service.py  user.py
backend/src/: main.py
backend/src/core/: __init__.py  groq.py  logging.py  rate_limit.py  settings.py
backend/src/crud/: order.py  others.py  product.py  service.py  user.py
backend/src/db/: __init__.py  main.py
backend/src/dtos/: __init__.py  client.py  employee.py  order.py  payment.py  product.py  service.py
backend/src/middlewares/: __init__.py  logging.py
(+137 files in other folders)
