[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "groq>=1.0.0",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.21",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "weasyprint>=67.0",
]
